--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -49,9 +49,9 @@ import Card from '../../components/project/card/projectCard.astro'
       <h1 class="pt-4 -mb-6 text-center text-2xl md:text-left">My project</h1>
       <h2 class="pt-4 -mb-6 text-center text-2xl ">More Coming Soon...</h2>
 
-        <ul class="grind mx-auto grid-cols-1 text-xl">
+        <ul class= mx-auto grid-cols-1 text-xl">
 
-            <ul class="grind grid grid-cols-1 gap-4 py-8 md:grid-cols-4 md:gap-y-40">
+            <ul class=" grid grid-cols-1 gap-4 py-8 md:grid-cols-4 md:gap-y-40">
               <li><Card
                 name="KNACKSAT-2 TGPS"
                 description="Thai German Pre-Engineering Sattlelite Project"
