fix:forgoten update

--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -167,7 +167,7 @@ import Contact from '../../components/script/Contact.astro'
                             <p
                               class="mx-1 inline rounded-lg bg-black p-1 text-white shadow-lg hover:shadow-xl"
                             >
-                              KMUTT Portfolio
+                              YWC20 Porfolio
                             </p>
                           </div>
                         </span>
