--- a/src/components/bloglayout.astro
+++ b/src/components/bloglayout.astro
@@ -50,14 +50,13 @@ const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij · ${title}`
     ></script></head
   >
 
-  <body class="h-full w-full bg-white dark:bg-[#121212]">
+  <body class="h-full w-full bg-white ">
     <slot />
   </body>
 
   <style is:global>
-    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Noto+Sans+Thai+Looped:wght@500&display=swap');
-    body {
-      font-family: 'Noto Sans Thai Looped', 'IBM Plex Sans Thai Looped',
+      @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');    body {
+      font-family: 'Sarabun', 'IBM Plex Sans Thai Looped',
         sans-serif;
     }
     :root {
@@ -68,10 +67,6 @@ const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij · ${title}`
         #da62c4 30%,
         white 60%
       );
-    }
-    html {
-      font-family: system-ui, sans-serif;
-      background-color: #f6f6f6;
     }
     code {
       font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
