--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -47,9 +47,9 @@ const { page, featuredBlogPost } = Astro.props
   image="/full-body.webp"
   ,
 />
-<div class="bg-white dark:bg-[#332940]">
+<div class="bg-white">
   <Navbar />
-  <div class="mx-auto mt-4 max-w-7xl gap-4 rounded-xl dark:bg-[#121212]">
+  <div class="mx-auto mt-4 max-w-7xl gap-4 rounded-xl ">
     <div class="rounded-xl sm:px-6 lg:px-8 dark:bg-[#121212]">
       {
         featuredBlogPost !== null && (
