fix:remove dark mode

--- a/src/modules/blog/components/layout.astro
+++ b/src/modules/blog/components/layout.astro
@@ -21,7 +21,7 @@ const { banner, title, subtitle } = data
 
   <div class="mx-auto max-w-4xl pt-6">
     <div
-      class="overflow-hidden rounded-none bg-white shadow-xl sm:rounded-2xl dark:bg-[#332940]"
+      class="overflow-hidden rounded-none bg-white shadow-xl sm:rounded-2xl "
       style={`view-transition-name: blog-${slug}`}
     >
       <div class="flex items-center justify-center overflow-hidden">
