fix:remove dark mode

--- a/src/modules/blog/components/heading.astro
+++ b/src/modules/blog/components/heading.astro
@@ -12,13 +12,13 @@ const { title, author, date, categories } = Astro.props.blog.data
 ---
 
 <section>
-  <h1 class="text-2xl text-gray-900 sm:text-4xl dark:text-gray-50">{title}</h1>
-  <p class="mt-2 text-gray-500 dark:text-gray-200">
-    Written by <span class="font-medium text-gray-600 dark:text-gray-50"
+  <h1 class="text-2xl text-gray-900 sm:text-4xl ">{title}</h1>
+  <p class="mt-2 text-gray-500">
+    Written by <span class="font-medium text-gray-600 "
       >{author}</span
-    > on <span class="font-medium text-gray-600 dark:text-gray-50"
+    > on <span class="font-medium text-gray-600"
       >{serializeDate(date)}</span
-    > · <span class="font-medium text-gray-600 dark:text-gray-200"
+    > · <span class="font-medium text-gray-600"
       >{Astro.props.minutesRead}</span
     >
   </p>
