--- a/src/modules/blog/components/layout.astro
+++ b/src/modules/blog/components/layout.astro
@@ -34,7 +34,7 @@ const { banner, title, subtitle } = data
           fetchPriority="high"
         />
       </div>
-      <div class="px-4 py-8 sm:px-6 lg:px-8 dark:text-gray-50">
+      <div class="px-4 py-8 sm:px-6 lg:px-8">
         <Heading {...Astro.props} />
 
         <article
