chore: clean up and fix layout

--- a/src/modules/blog/components/layout.astro
+++ b/src/modules/blog/components/layout.astro
@@ -38,7 +38,7 @@ const { banner, title, subtitle } = data
         <Heading {...Astro.props} />
 
         <article
-          class="prose prose-blue mx-auto max-w-6xl pt-6 text-xl md:text-2xl"
+          class="prose prose-blue mx-auto max-w-6xl pt-6 text-2xl"
         >
           <slot />
         </article>
