hotfix:during dark mode

--- a/src/components/bloglayout.astro
+++ b/src/components/bloglayout.astro
@@ -50,7 +50,7 @@ const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij · ${title}`
     ></script></head
   >
 
-  <body class="h-full w-full bg-white ">
+  <body class="h-full w-full bg-white dark:bg-[#121212] ">
     <slot />
   </body>
 
