--- a/src/pages/about-me/index.astro
+++ b/src/pages/about-me/index.astro
@@ -139,7 +139,7 @@ import Contact from '../../components/script/Contact.astro'
                     <div class="mt-5 flex">
                       <p class="mt-2 flex">- My resume :</p>
                       <a
-                        href="SiravijPraevisavakijCV.pdf"
+                        href="/SiravijPraevisavakijCV.pdf"
                         aria-label="CV"
                         class="ml-1 mt-2"
                       >
